--- a/requirements.txt
+++ b/requirements.txt
@@ -99,3 +99,4 @@ requests @ git+https://github.com/psf/requests.git@eea3bbf9ac635f465ee6c9903dc57
 urllib3==2.2.1 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:450b20ec296a467077128bff42b73080516e71b56ff59a60a02bef2232c4fa9d \
     --hash=sha256:d0570876c61ab9e520d776c38acbbb5b05a776d3f9ff98a5c8fd5162a444cf19
+fetap @ git+https://github.com/mmEissen/fetap.git
