--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+click = "^8.1.7"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.0.2"
 
 [build-system]
 requires = ["poetry-core"]
