--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 click = "^8.1.7"
+rpi-gpio = {version="==0.7.1", markers="platform_machine == 'aarch64'"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
