--- a/.github/workflows/compile-pjsua.yml
+++ b/.github/workflows/compile-pjsua.yml
@@ -25,7 +25,8 @@ jobs:
             build-essential \
             wget \
             swig \
-            python3-dev
+            python3-dev \
+            python3-pip
           python3 -m pip install build
 
       - name: Download source release of PJSUA/PJSIP
