--- a/.github/workflows/compile-pjsua.yml
+++ b/.github/workflows/compile-pjsua.yml
@@ -27,7 +27,6 @@ jobs:
             swig \
             python3-dev \
             python3-pip
-          python3 -m pip install --break-system-packages build
 
       - name: Download source release of PJSUA/PJSIP
         run: |
@@ -45,9 +44,8 @@ jobs:
       - name: Buld Python SWIG Module
         run: |
           cd pjproject/pjsip-apps/src/swig/python
-          python3 -m build --wheel
+          python3 setup.py bdist_wheel
           find .
-
 
     #   - name: Upload binary
     #     uses: actions/upload-artifact@v3
