--- a/.github/workflows/compile-pjsua.yml
+++ b/.github/workflows/compile-pjsua.yml
@@ -44,9 +44,9 @@ jobs:
       - name: Buld Python SWIG Module
         run: |
           cd pjproject/pjsip-apps/src/swig/python
-          echo "bdist:" >> Makefile
+          echo "all:" >> Makefile
           echo "	python setup.py bdist_wheel" >> Makefile
-          make bdist
+          make
           find .
 
     #   - name: Upload binary
