--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-statemachine = "^2.1.2"
 rpi-gpio = {version="==0.7.1", markers="platform_machine == 'aarch64'"}
 requests = "^2.31.0"
 flask = "^3.0.3"
+filelock = "^3.13.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
