--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = ">=3.9,<3.13"  # To satisfy statemachine's requirement
 click = "^8.1.7"
 python-statemachine = "^2.1.2"
-rpi-gpio = {version="==0.7.1", markers="platform_machine == 'aarch64'"}
+rpi-gpio = {version="==0.7.1", markers="platform_machine == 'aarch64' or platform_machine == 'armv6l'"}
 requests = "^2.31.0"
 flask = "^3.0.3"
 filelock = "^3.13.4"
@@ -18,6 +18,7 @@ filelock = "^3.13.4"
 pytest = "^8.0.2"
 python-statemachine = {extras = ["diagrams"], version = "^2.1.2"}
 black = "^24.3.0"
+pydot = "^2.0.0"
 
 [build-system]
 requires = ["poetry-core"]
