--- a/.github/workflows/server-build-docker.yml
+++ b/.github/workflows/server-build-docker.yml
@@ -44,6 +44,8 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           source: server/docker-compose-prod.yml
           target: /home/momo/usb2/server
+          rm: true
+          strip_components: 1
 
       - name: Deploy via ssh
         uses: appleboy/ssh-action@v1.2.0
@@ -54,7 +56,7 @@ jobs:
           script: |
             cd /home/momo/usb2/server
             docker compose -f docker-compose-prod.yml down
-            docker compose up -d --pull always --remove-orphans -y
+            docker compose up -d --pull always --remove-orphans
             docker system prune --all --force
 
 
