--- a/.github/workflows/server-build-docker.yml
+++ b/.github/workflows/server-build-docker.yml
@@ -1,6 +1,8 @@
 name: Deploy Server
 
-on: [push]
+on: 
+  push:
+    branches: ["main"]
 jobs:
   build_docker_images:
     strategy:
@@ -18,15 +20,24 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
+      - name: Check if files changed
+        uses: marceloprado/has-changed-path@v1.0.1
+        id: service-changed
+        with:
+          paths: server/${{ matrix.service-name }}
 
       - name: Log in to Docker Hub
+        if: steps.service-changed.outputs.changed == 'true'
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
-        id: push
+        if: steps.service-changed.outputs.changed == 'true'
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
           context: ./server/${{ matrix.service-name }}
@@ -40,8 +51,17 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
+      - name: Check if files changed
+        uses: marceloprado/has-changed-path@v1.0.1
+        id: server-changed
+        with:
+          paths: server
 
       - name: Copy docker-compose.yml
+        if: steps.server-changed.outputs.changed == 'true'
         uses: appleboy/scp-action@v0.1.7
         with:
           host: fetap.net
@@ -53,6 +73,7 @@ jobs:
           strip_components: 1
 
       - name: Deploy via ssh
+        if: steps.server-changed.outputs.changed == 'true'
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: fetap.net
