--- a/server/docker-compose-prod.yml
+++ b/server/docker-compose-prod.yml
@@ -17,7 +17,7 @@ services:
       - certbot-conf:/etc/nginx/ssl/:ro
 
   certbot:
-    image: certbot/certbot:latest
+    image: mmeissen/fetap-certbot:latest
     volumes:
       - certbot-www:/var/www/certbot/:rw
       - certbot-conf:/etc/letsencrypt/:rw
