--- a/.github/workflows/server-build-docker.yml
+++ b/.github/workflows/server-build-docker.yml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         service-name:
           - fetap-core
-    runs-on: [self-hosted, arm64]
+    runs-on: ubuntu-24.04-arm
     name: Build and push ${{ matrix.service-name }}
     permissions:
       packages: write
@@ -36,7 +36,7 @@ jobs:
           - fetap-nginx
           - fetap-server
           - fetap-certbot
-    runs-on: [self-hosted, arm64]
+    runs-on: ubuntu-24.04-arm
     name: Build and push ${{ matrix.service-name }}
     permissions:
       packages: write
