--- a/server/fetap-nginx/http.conf
+++ b/server/fetap-nginx/http.conf
@@ -14,17 +14,17 @@ server {
     }
 }
 
-# server {
-#     listen 443 default_server ssl http2;
-#     listen [::]:443 ssl http2;
+server {
+    listen 443 default_server ssl http2;
+    listen [::]:443 ssl http2;
 
-#     server_name fetap.net;
+    server_name fetap.net;
 
-#     ssl_certificate /etc/nginx/ssl/live/example.org/fullchain.pem;
-#     ssl_certificate_key /etc/nginx/ssl/live/example.org/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/live/example.org/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/example.org/privkey.pem;
     
-#     location / {
-#         root   /usr/share/nginx/html;
-#         index  index.html index.htm;
-#     }
-# }
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+    }
+}
