--- a/server/docker-compose-prod.yml
+++ b/server/docker-compose-prod.yml
@@ -18,15 +18,16 @@ services:
 
   certbot:
     image: mmeissen/fetap-certbot:latest
+    container_name: certbot_1
     volumes:
       - certbot-www:/var/www/certbot/:rw
       - certbot-conf:/etc/letsencrypt/:rw
 
-  # certbot_restarter:
-  #   image: docker:cli
-  #   volumes: ["/var/run/docker.sock:/var/run/docker.sock"]
-  #   command: ["/bin/sh", "-c", "while true; do sleep 43200; docker restart acme_sh_1; done"]
-  #   restart: unless-stopped
+  certbot_restarter:
+    image: docker:cli
+    volumes: ["/var/run/docker.sock:/var/run/docker.sock"]
+    command: ["/bin/sh", "-c", "while true; do sleep 43200; docker restart certbot_1; done"]
+    restart: always
 
 volumes:
   acme-challenge:
