--- a/server/fetap-nginx/http.conf
+++ b/server/fetap-nginx/http.conf
@@ -20,8 +20,8 @@ server {
 
     server_name fetap.net;
 
-    ssl_certificate /etc/nginx/ssl/live/example.org/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/example.org/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/live/fetap.net/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/fetap.net/privkey.pem;
     
     location / {
         root   /usr/share/nginx/html;
