--- a/server/fetap-nginx/http.conf
+++ b/server/fetap-nginx/http.conf
@@ -15,8 +15,9 @@ server {
 }
 
 server {
-    listen 443 default_server ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 default_server ssl;
+    listen [::]:443 ssl;
+    http 2 on;
 
     server_name fetap.net;
 
