--- a/server/fetap-nginx/http.conf
+++ b/server/fetap-nginx/http.conf
@@ -14,18 +14,18 @@ server {
     }
 }
 
-server {
-    listen 443 default_server ssl;
-    listen [::]:443 ssl;
-    http2 on;
+# server {
+#     listen 443 default_server ssl;
+#     listen [::]:443 ssl;
+#     http2 on;
 
-    server_name fetap.net;
+#     server_name fetap.net;
 
-    ssl_certificate /etc/nginx/ssl/live/fetap.net/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/fetap.net/privkey.pem;
+#     ssl_certificate /etc/nginx/ssl/live/fetap.net/fullchain.pem;
+#     ssl_certificate_key /etc/nginx/ssl/live/fetap.net/privkey.pem;
     
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
-}
+#     location / {
+#         root   /usr/share/nginx/html;
+#         index  index.html index.htm;
+#     }
+# }
