add asterisk service

--- a/.github/workflows/server-build-docker.yml
+++ b/.github/workflows/server-build-docker.yml
@@ -37,6 +37,7 @@ jobs:
           - fetap-nginx
           - fetap-server
           - fetap-certbot
+          - fetap-asterisk
     runs-on: ubuntu-24.04-arm
     name: Build and push ${{ matrix.service-name }}
     permissions:
