--- a/server/docker-compose-prod.yml
+++ b/server/docker-compose-prod.yml
@@ -16,6 +16,13 @@ services:
       - certbot-www:/var/www/certbot/:ro
       - certbot-conf:/etc/nginx/ssl/:ro
 
+  asterisk:
+    image: mmeissen/fetap-asterisk:latest
+    restart: always
+    ports:
+      - "5060:5060/udp"
+      - "10000-20000:10000-20000/udp"
+
   certbot:
     image: mmeissen/fetap-certbot:latest
     container_name: certbot_1
