increase command timeout to 30 minutes

--- a/.github/workflows/server-build-docker.yml
+++ b/.github/workflows/server-build-docker.yml
@@ -113,3 +113,4 @@ jobs:
             docker compose -f docker-compose-prod.yml down
             docker compose -f docker-compose-prod.yml up -d --pull always --remove-orphans
             docker system prune --all --force
+          command_timeout: 30m
